# p3dx_description_ros

./: CMakeLists.txt  README.md  package.xml  report.md  run.sh
config/: ekf.yaml
launch/: collision_monitor_navigation_launch.py  collision_monitor_node.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  p3dx_description_ros2.launch.py  slam_launch.py
maps/: .yaml
meshes/: Coordinates
urdf/: materials.xacro  pioneer3dx.gazebo  pioneer3dx.xacro  pioneer3dx.xml  pioneer3dx_fixed_joints.urdf  pioneer3dx_fixed_joints.xml
